--- a/utilslib/build.gradle
+++ b/utilslib/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     api 'com.android.support:recyclerview-v7:27.1.1'
+    api 'com.squareup.okhttp3:okhttp:3.11.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
