--- a/utilslib/build.gradle
+++ b/utilslib/build.gradle
@@ -21,20 +21,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    api 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    api 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
     api 'com.squareup.okhttp3:okhttp:3.13.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
