--- a/utilslib/build.gradle
+++ b/utilslib/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -26,10 +24,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
-    api 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
+    api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'com.squareup.okhttp3:okhttp:3.13.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
